<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background">


    <TextView
        android:id="@+id/top_text_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/session_finished"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/top_text_rate"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="15dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/ll_nextReport">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/do_session_report"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rate_patioent"
            android:textColor="@color/white"
            android:textSize="15sp" />



        <!--<RatingBar-->
        <!--android:id="@+id/ratingBar"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:numStars="5"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:stepSize="1.0"-->
        <!--android:rating="2.0" />-->
        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.50"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/et_rateReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/white"
            android:shadowColor="@color/white"
            android:layout_gravity="center"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:hint="@string/reason_of_rate"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:inputType="text"
            android:textStyle="bold"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/rate_footer"
            android:textColor="@color/tinytext"
            android:textSize="15sp" />



    </LinearLayout>


</RelativeLayout>


