<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginback"
    tools:context="com.asi.m3alig.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/haveaccount"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_border_view"
                android:onClick="login"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".2"
                    android:src="@drawable/downarrow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <include
                layout="@layout/login_view"
                android:layout_width="match_parent"
                android:layout_height="350dp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/havenoaccount"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_border_view"
                android:onClick="register"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".2"
                    android:src="@drawable/downarrow" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="@string/registernewaccount"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <include
                layout="@layout/register_as_moaleg"
                android:layout_width="match_parent"
                android:layout_height="350dp" />
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usingservice"
            android:textColor="@color/tinytext2"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/youaccept"
            android:textColor="@color/tinytext2"

            android:textAlignment="center" />
    </LinearLayout>
</RelativeLayout>
