<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asi.m3alig.BeforLoginActivity"
    android:orientation="vertical"
    android:background="@drawable/befor_login_back"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/maleg"
            />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:padding="10dp"
            android:background="@drawable/login_button_back"
            android:onClick="goToLogin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_mo3alg"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/tinytext2"
            />
        <TextView
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/login_as_m3alg"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_button_back"
            android:onClick="loginAsMo3alg"
            />
    </LinearLayout>

</RelativeLayout>
