<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background">


    <LinearLayout
        android:id="@+id/top_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:text="@string/visit_start_sence"
            android:textColor="@color/tinytext"
            android:layout_gravity="center"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="40 دقيقة و 20 ثانية"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/top_finish"
            android:onClick="rateSession"
        android:background="@drawable/round_layout_tint"
        android:padding="5dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enter_to_finish_and_rate"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/with_our_wishes"
        android:textColor="@color/tinytext"
        android:textSize="15sp" />

</RelativeLayout>



